# project-barney

./: .gitignore  README.md  ai_call.py  analysis_stack.py  channel_search.py  convert_subtitle_to_text.py  database_manager.py  download_videos.py  export_to_csv.py  fetch_playlist_videos.py  fetch_subtitles.py  generate_report.py  list_videos_by_date.py  pipeline_interface.html  pyproject.toml  requirements.txt  reset_analysis.py  retry_pending_downloads.py  run_pipeline.py  run_pipeline_single_table.py  search_channel_videos_for_keyword.py  search_channels.py  transcribe_videos.py  transcription_stack.py
src/: config.py  main.py
src/pipeline_scripts/: ai_call.py  batch_ai_analyzer.py  convert_subtitle_to_text.py  create_custom_db.py  database_manager.py  db_info_utils.py  delete_last_30_videos.py  export_ai_analysis.py  export_to_csv.py  fetch_subtitles.py  fetch_video_descriptions.py  find_youtube_channels_by_keyword.py  generate_participant_report.py  playlist_processor.py  segment_transcripts_10w.py  transcribe_videos.py
src/utils/: db_utils.py  ui_utils.py
src/views/: change_database_view.py  database_preview_view.py  home_view.py  pipeline_complete_view.py  pipeline_db_setup_view.py  pipeline_intro_view.py  pipeline_playlist_view.py  pipeline_progress_view.py  run_ai_analysis_view.py  settings_view.py  view_database_view.py
